# trytravis

./: .travis.yml  CMakeLists.txt  README.md  build-mingw64.sh  build-ubuntu.sh  hello-msys.sh  travis.yml-deactivated
.github/workflows/: github-actions-demo.yml
src/: CMakeLists.txt  main.cpp
src/mainwindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
test/unit/: CMakeLists.txt  tree.cpp
